// proto/universidad.proto
syntax = "proto3";

package universidad;

import "google/protobuf/empty.proto";

// Mensajes para Estudiante
message Estudiante {
    string ci = 1;
    string nombres = 2;
    string apellidos = 3;
    string carrera = 4;
}

message EstudianteRequest {
    string ci = 1;
}

message EstudianteResponse {
    Estudiante estudiante = 1;
}

message EstudiantesList {
    repeated Estudiante estudiantes = 1;
}

// Mensajes para Curso
message Curso {
    string codigo = 1;
    string nombre = 2;
    string docente = 3;
}

message CursoRequest {
    string codigo = 1;
}

message CursoResponse {
    Curso curso = 1;
}

message CursosList {
    repeated Curso cursos = 1;
}

// Mensajes para Inscripción
message InscripcionRequest {
    string ci_estudiante = 1;
    string codigo_curso = 2;
}

message InscripcionResponse {
    bool success = 1;
    string message = 2;
}

// Servicio principal
service UniversidadService {
    // Servicios de Estudiantes
    rpc AgregarEstudiante(Estudiante) returns (EstudianteResponse);
    rpc ObtenerEstudiante(EstudianteRequest) returns (EstudianteResponse);
    rpc ListarEstudiantes(google.protobuf.Empty) returns (EstudiantesList);
    
    // Servicios de Cursos
    rpc AgregarCurso(Curso) returns (CursoResponse);
    rpc ObtenerCurso(CursoRequest) returns (CursoResponse);
    rpc ListarCursos(google.protobuf.Empty) returns (CursosList);
    
    // Servicios de Inscripción
    rpc InscribirEstudiante(InscripcionRequest) returns (InscripcionResponse);
    rpc ListarCursosDeEstudiante(EstudianteRequest) returns (CursosList);
    rpc ListarEstudiantesDeCurso(CursoRequest) returns (EstudiantesList);
}